<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel_purple"
    tools:context=".latihan.Sign_inFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/card_sign_in"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/action_sign_in_short"
        android:gravity="center_horizontal"
        android:textSize="42sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_sign_in"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/logUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="username"
                android:hint="@string/username"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/logPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logUsername"
                android:layout_marginBottom="10dp"
                android:autofillHints="password"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/pastel_yellow"
                android:text="@string/action_sign_in_short"
                android:textColor="#BF360C"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_sign_in"
                android:text="@string/havent"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>